test/corpus/includes.txt
==================
Simple include
==================

include "types.frugal"

struct User {
  1: string name
}

---

(document
  (include
    (literal_string))
  (definition
    (struct_definition
      (identifier)
      (struct_body
        (field
          (field_id (integer))
          (field_type (base_type))
          (identifier))))))

==================
Multiple includes
==================

include "common/types.frugal"
include "auth/permissions.frugal" 
include "../shared/constants.frugal"

const string API_VERSION = "v1"

---

(document
  (include
    (literal_string))
  (include
    (literal_string))
  (include
    (literal_string))
  (definition
    (const_definition
      (field_type (base_type))
      (identifier)
      (const_value (literal_string)))))

==================
Include with namespace
==================

include "external.frugal"

namespace java com.example.service
namespace py example.service

service MyService {
  void ping()
}

---

(document
  (include
    (literal_string))
  (namespace
    (namespace_scope)
    (identifier))
  (namespace
    (namespace_scope)
    (identifier))
  (definition
    (service_definition
      (identifier)
      (service_body
        (function_definition
          (function_type (base_type))
          (identifier)
          (field_list))))))
